# ride

./: .gitignore  README.md  login.json  start-dev-terminals.bat  start-dev-vscode.bat  start-dev.bat  start-dev.sh  stop-dev.bat
backend/: .env.example  .gitignore  COBERTURA_TESTES.md  Dockerfile  README.md  README_NOVO.md  docker-compose.yml  main.py  requirements.txt  start.bat  start.sh  test_asaas_connection.py  test_complete_flow.py  test_payment_flow.py  test_simple_asaas.py
backend/api/: auth.py  categories.py  dashboard.py  demo.py  dependencies.py  goals.py  payments.py  transactions.py  webhooks.py
backend/config/: __init__.py  database.py  logging_config.py  payments.py  settings.py
backend/models/: __init__.py
backend/schemas/: auth_schemas.py  category_schemas.py  dashboard_schemas.py  goal_schemas.py  payment_schemas.py  transaction_schemas.py
backend/scripts/: data_generators.py  fix_deps.py  init_db.py  migrate_goal_categories.py  migrate_user_fields.py  run_all_tests.py  run_payment_tests.py  run_tests.py  seed_demo_data.py  setup_demo.py  simple_test.py
backend/services/: asaas_service.py  auth_service.py  goal_service.py  (+7 more)
backend_rs/: Cargo.toml
backend_rs/src/: main.rs
backend_rs/src/cache/: mod.rs
backend_rs/src/config/: mod.rs
backend_rs/src/errors/: mod.rs
backend_rs/src/handlers/: mod.rs
backend_rs/src/models/: mod.rs
backend_rs/src/services/: mod.rs
backend_rs/src/traits/: icacheable.rs  icrudable.rs  iquerable.rs  mod.rs
frontend/: GOALS_TEST_STATUS.md  jest.config.js  next.config.ts  package-lock.json  package.json
(+117 files in other folders)
