[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database & ORM
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = "2.1"
r2d2 = "0.8"

# Cache
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID & Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment & Config
dotenvy = "0.15"

# Async Traits
async-trait = "0.1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Decimal for money calculations
rust_decimal = { version = "1.33", features = ["serde", "serde-str"] }
